# lexical_scanner

./: Cargo.toml  README.md  index.md
doc/: crates.js  search-index.js  settings.html  source-files.js
doc/implementors/core/clone/: trait.Clone.js
doc/implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
doc/implementors/core/fmt/: trait.Debug.js
doc/implementors/core/iter/traits/iterator/: trait.Iterator.js
doc/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
doc/implementors/core/ops/deref/: trait.Deref.js
doc/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
doc/lexical_scanner/: all.html  fn.lexer.html  fn.lexer_as_str.html  index.html  sidebar-items.js
doc/lexical_scanner/enums/: enum.Token.html  index.html  sidebar-items.js
doc/lexical_scanner/lexer/: index.html  sidebar-items.js
doc/lexical_scanner/lexer/generics/: index.html
doc/lexical_scanner/lexer/generics/generic/: index.html  sidebar-items.js  struct.RawString.html
doc/lexical_scanner/lexer/generics/generic/escapes/: index.html
doc/lexical_scanner/lexer/lexer/: index.html  sidebar-items.js
doc/lexical_scanner/lexer/lexer/lexer/: index.html  struct.Tokenizer.html
doc/src/lexical_scanner/: lib.rs.html
doc/src/lexical_scanner/enums/: mod.rs.html
doc/src/lexical_scanner/lexer/: generics.rs.html  lexer.rs.html  mod.rs.html
src/: lib.rs
src/enums/: mod.rs
src/lexer/: generics.rs  lexer.rs  mod.rs
test/: test.txt
(+2 files in other folders)
