[package]
name = "lexical_scanner"
version = "0.1.11"
edition = "2021"
license = "MIT"
repository = "https://github.com/mjehrhart/lexical_scanner"
description = "A simple lexer which creates over 75 various tokens based on the rust programming language. This library does not use regex!" 
keywords = ["lexer", "lexical", "scanlex", "lexical_scanner", "tokenizer"]

[dependencies] 
